<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/game_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <ScrollView
        android:id="@+id/deck_scroll_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/deck_scroll_view_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/player_cards"
                android:layout_width="210dp"
                android:layout_height="183dp"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/player_draw_layout"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/player_cards_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/player_cards" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/player_card"
                        android:layout_width="75dp"
                        android:layout_height="100dp">

                        <LinearLayout
                            android:id="@+id/player_card_background_color"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/player_card_top"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/first_aid_image"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:alpha=".5"
                                android:contentDescription="@string/first_aid_image_description"
                                app:srcCompat="@drawable/first_aid_icon" />

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/player_discard_pile_area"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/player_discards_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/player_discards" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/player_discard_pile"
                        android:layout_width="75dp"
                        android:layout_height="100dp"
                        app:cardBackgroundColor="@android:color/holo_red_dark"
                        app:cardCornerRadius="10dp">

                        <LinearLayout
                            android:id="@+id/player_discard_pile_layout"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/red_infection_gradient"
                            android:orientation="vertical">

                            <LinearLayout
                                android:id="@+id/player_card_description_layout"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/player_card_description"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:background="#C6C8C1C1"
                                    android:text="@string/card_name" />
                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/player_card_content_layout"
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:gravity="bottom|right"
                                android:orientation="horizontal">

                                <androidx.cardview.widget.CardView
                                    android:id="@+id/player_card_icon_card"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginEnd="10dp"
                                    android:layout_marginRight="10dp"
                                    app:cardBackgroundColor="#C8BCBC"
                                    app:cardCornerRadius="20dp">

                                    <ImageView
                                        android:id="@+id/player_card_icon_image"
                                        android:layout_width="20dp"
                                        android:layout_height="20dp"
                                        android:adjustViewBounds="false"
                                        android:background="@color/colorBlueVirusDark"
                                        android:contentDescription="@string/player_card_virus_image"
                                        app:srcCompat="@drawable/blue_virus_icon" />
                                </androidx.cardview.widget.CardView>
                            </LinearLayout>

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/infection_cards"
                android:layout_width="180dp"
                android:layout_height="240dp"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/infection_cards_title"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/infection_cards" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/infection_draw_pile"
                        android:layout_width="100dp"
                        android:layout_height="75dp"
                        app:cardBackgroundColor="#00FFFFFF"
                        app:cardCornerRadius="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/infection_card_top"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:alpha=".5"
                                android:background="@drawable/pandemic"
                                android:orientation="horizontal">

                            </LinearLayout>
                        </LinearLayout>

                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/infection_discards_title"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/infection_discards" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/infection_discard_pile"
                        android:layout_width="100dp"
                        android:layout_height="75dp"
                        app:cardBackgroundColor="@android:color/holo_red_dark"
                        app:cardCornerRadius="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/red_infection_gradient"
                            android:orientation="vertical">

                            <LinearLayout
                                android:id="@+id/infection_card_description_layout"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:paddingStart="5dp"
                                android:paddingLeft="5dp"
                                android:paddingTop="5dp"
                                android:paddingEnd="10dp"
                                android:paddingRight="10dp">

                                <androidx.cardview.widget.CardView
                                    android:id="@+id/infection_icon_card"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginEnd="10dp"
                                    android:layout_marginRight="10dp"
                                    app:cardBackgroundColor="#C8BCBC"
                                    app:cardCornerRadius="20dp">

                                    <ImageView
                                        android:id="@+id/infection_card_virus_icon"
                                        android:layout_width="20dp"
                                        android:layout_height="20dp"
                                        android:adjustViewBounds="false"
                                        android:contentDescription="@string/infection_card_virus_image"
                                        app:srcCompat="@drawable/blue_virus_icon" />
                                </androidx.cardview.widget.CardView>

                                <TextView
                                    android:id="@+id/infection_card_description"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:background="#C6C8C1C1"
                                    android:text="@string/card_name" />

                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/infection_card_image_layout"
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:gravity="bottom|right"
                                android:orientation="horizontal">

                                <ImageView
                                    android:id="@+id/infection_card_image"
                                    android:layout_width="40dp"
                                    android:layout_height="40dp"
                                    android:adjustViewBounds="false"
                                    android:contentDescription="@string/infection_card_virus_image"
                                    app:srcCompat="@drawable/blue_virus_icon" />
                            </LinearLayout>

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:id="@+id/players_scroll_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deck_scroll_view">

        <LinearLayout
            android:id="@+id/players_scroll_view_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <HorizontalScrollView
                android:id="@+id/player_1_scroll_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical" />
            </HorizontalScrollView>

            <HorizontalScrollView
                android:id="@+id/player_2_scroll_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical" />
            </HorizontalScrollView>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>